--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -4,7 +4,7 @@ permalink: /year-archive/
 title: "Blog posts"
 author_profile: true
 redirect_from:
-  https://adibsblogs.wordpress.com/2025/08/10/from-chittagong-to-goteborg-my-journey-to-swedish-university-admission/
+  - /wordpress/blog-posts/
 ---
 
 {% include base_path %}
